[gd_scene format=3 uid="uid://urq58br545gs"]

[ext_resource type="Script" uid="uid://de6cpupupoc4v" path="res://camera_3d.gd" id="1_5jff8"]
[ext_resource type="PackedScene" uid="uid://cd0mcl7t7fucq" path="res://player.tscn" id="2_ehg42"]
[ext_resource type="Shader" uid="uid://b6qyvof7wvvro" path="res://cube_back.gdshader" id="3_rfkqk"]
[ext_resource type="Shader" uid="uid://dgpcpdjnhq05x" path="res://cube_half.gdshader" id="4_l1oci"]
[ext_resource type="Script" uid="uid://bufeljf46r5lm" path="res://node_first_level.gd" id="5_5jff8"]
[ext_resource type="PackedScene" uid="uid://c0nby1g82p0dt" path="res://cube.tscn" id="5_8o0y0"]
[ext_resource type="PackedScene" uid="uid://d2kuud5y3m0rc" path="res://movement_node.tscn" id="7_an01n"]
[ext_resource type="Script" uid="uid://bgn8s1d5d8ix" path="res://bridge.gd" id="7_ehg42"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0xm2m"]
render_priority = -1
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0xm2m"]
material = SubResource("ShaderMaterial_0xm2m")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1bvp3"]
render_priority = 0
shader = ExtResource("4_l1oci")

[sub_resource type="BoxMesh" id="BoxMesh_lquwl"]
material = SubResource("ShaderMaterial_1bvp3")

[sub_resource type="MeshLibrary" id="MeshLibrary_7rpwa"]
resource_local_to_scene = true
item/0/name = "box_front"
item/0/mesh = SubResource("BoxMesh_0xm2m")
item/0/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/0/mesh_cast_shadow = 1
item/0/shapes = []
item/0/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/0/navigation_layers = 1
item/1/name = "half_box"
item/1/mesh = SubResource("BoxMesh_lquwl")
item/1/mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/1/mesh_cast_shadow = 1
item/1/shapes = []
item/1/navigation_mesh_transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
item/1/navigation_layers = 1

[sub_resource type="Environment" id="Environment_m677n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ehg42"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_rfkqk"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_ehg42")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l1oci"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_8o0y0"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_l1oci")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vag3g"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_an01n"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_vag3g")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7rpwa"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_m677n"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_7rpwa")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ftusf"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_8laww"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_ftusf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5s1t1"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_5beld"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_5s1t1")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5s4fc"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_rfkqk")
shader_parameter/hide_z = false
shader_parameter/hide_x = false
shader_parameter/hide_y = false
shader_parameter/mixColor = Vector3(1, 0.2, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_kdsay"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_5s4fc")

[node name="FirstLevel" type="Node3D" unique_id=886163814]

[node name="Camera3D" type="Camera3D" parent="." unique_id=249624012]
transform = Transform3D(0.7071068, -0.40860704, 0.57709646, 0, 0.8161376, 0.5778577, -0.7071068, -0.40860704, 0.57709646, 10, 15, 10)
cull_mask = 1048573
projection = 1
size = 20.0
near = 0.001
far = 8000.0
script = ExtResource("1_5jff8")

[node name="Player" parent="." unique_id=569844313 instance=ExtResource("2_ehg42")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="GridMapBack" type="GridMap" parent="." unique_id=791857673]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.5, -0.5)
mesh_library = SubResource("MeshLibrary_7rpwa")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(0, 0, 786432, 1, 0, 786432, 2, 0, 851968, 3, 0, 589824, 131076, 0, 589824, 196612, 0, 589824, 327684, 65535, 2, 327684, 65534, 2, 4, 0, 589824, 65540, 0, 1507328, 65535, 0, 1048576, 65534, 0, 1376256, 65533, 0, 1376256, 65533, 65535, 1376256, 65533, 65534, 1376256, 458756, 4, 1376257, 458752, 0, 1376256, 524287, 0, 1376256, 524286, 0, 1376256, 524285, 0, 1376256, 524285, 65535, 1376256, 524285, 65534, 1376256, 524285, 65533, 1376256)
}
metadata/_editor_floor_ = Vector3(-1, 7, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1078041316]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer" unique_id=2061542111]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer" unique_id=1968709372]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Overlay" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport" unique_id=1456180370]
transform = Transform3D(0.7071068, -0.408607, 0.57709646, 0, 0.8161376, 0.5778576, -0.7071068, -0.408607, 0.57709646, 10, 15, 10)
cull_mask = 1047554
environment = SubResource("Environment_m677n")
projection = 1
size = 20.0
near = 0.001
far = 8000.0
script = ExtResource("1_5jff8")

[node name="MovementNodes" type="Node3D" parent="." unique_id=46154884]
script = ExtResource("5_5jff8")

[node name="MovementNode" parent="MovementNodes" unique_id=2142940285 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="MovementNode6" parent="MovementNodes" unique_id=1785267531 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)

[node name="MovementNode7" parent="MovementNodes" unique_id=42038133 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)

[node name="MovementNode8" parent="MovementNodes" unique_id=1702280348 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 0)

[node name="MovementNode2" parent="MovementNodes" unique_id=1781312556 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="MovementNode3" parent="MovementNodes" unique_id=287992635 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 0)

[node name="MovementNode4" parent="MovementNodes" unique_id=826483378 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0)

[node name="MovementNode5" parent="MovementNodes" unique_id=1046027944 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -1)

[node name="MovementNode9" parent="MovementNodes" unique_id=1333045527 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -2)

[node name="MovementNode10" parent="MovementNodes" unique_id=1956850482 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 8, 4)

[node name="Bridge" type="Node3D" parent="." unique_id=1806251074]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 7, 0)
script = ExtResource("7_ehg42")

[node name="cube" parent="Bridge" unique_id=1848692459 instance=ExtResource("5_8o0y0")]
mesh = SubResource("BoxMesh_rfkqk")

[node name="cube5" parent="Bridge" unique_id=628707365 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("BoxMesh_8o0y0")

[node name="cube6" parent="Bridge" unique_id=962319687 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
mesh = SubResource("BoxMesh_an01n")

[node name="cube7" parent="Bridge" unique_id=1714486825 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)
mesh = SubResource("BoxMesh_m677n")

[node name="cube2" parent="Bridge" unique_id=1758135630 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_8laww")

[node name="cube3" parent="Bridge" unique_id=799743210 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
mesh = SubResource("BoxMesh_5beld")

[node name="cube4" parent="Bridge" unique_id=2132655348 instance=ExtResource("5_8o0y0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
mesh = SubResource("BoxMesh_kdsay")

[node name="MovementNode11" parent="Bridge" unique_id=1313409368 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -3, 1)

[node name="MovementNode12" parent="Bridge" unique_id=795022295 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -2, 1)

[node name="MovementNode13" parent="Bridge" unique_id=516634678 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -1, 1)

[node name="MovementNode14" parent="Bridge" unique_id=660059899 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 1)

[node name="MovementNode15" parent="Bridge" unique_id=1741302014 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -1, 0, 1)

[node name="MovementNode16" parent="Bridge" unique_id=103829837 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -2, 0, 1)

[node name="MovementNode17" parent="Bridge" unique_id=1734483517 instance=ExtResource("7_an01n")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, -3, 0, 1)
